ambiente parece pronto

--- a/ambiente_monstrinho.ipynb
+++ b/ambiente_monstrinho.ipynb
@@ -2,22 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[.] [.] [.] [.] [.] [.] [.] [.] [H],\n",
+      "[.] [H] [.] [H] [.] [.] [.] [.] [.],\n",
+      "[.] [.] [.] [.] [.] [.] [.] [W] [.],\n",
+      "[.] [.] [.] [H] [.] [.] [.] [.] [.],\n",
+      "[.] [.] [.] [H] [.] [.] [.] [.] [.],\n",
+      "[.] [.] [.] [.] [H] [.] [.] [.] [.],\n",
+      "[.] [.] [.] [.] [.] [.] [G] [.] [.],\n",
+      "[.] [.] [.] [.] [.] [H] [.] [.] [.],\n",
+      "[H] [.] [.] [H] [.] [.] [.] [.] [.],\n",
       "[.] [.] [.] [.] [.] [.] [.] [.] [.],\n",
-      "[.] [.] [.] [.] [.] [.] [.] [.] [.],\n",
-      "[.] [.] [.] [.] [.] [.] [.] [H] [H],\n",
-      "[.] [.] [.] [.] [.] [.] [.] [.] [W],\n",
-      "[.] [.] [H] [.] [.] [.] [.] [.] [H],\n",
-      "[.] [.] [.] [.] [.] [.] [H] [.] [.],\n",
-      "[.] [.] [.] [.] [.] [.] [.] [.] [G],\n",
-      "[.] [.] [.] [.] [.] [.] [.] [H] [H],\n"
+      "buraco em l[0] c[1]\n",
+      "brisa ->  [(0, 1), None, None, (0, 2)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[0] c[3]\n",
+      "brisa ->  [(0, 3), None, None, (0, 4)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "wumpus em l[1] c[7]\n",
+      "fedor ->  [(1, 7), (0, 7), (0, 7), (1, 8)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[2] c[3]\n",
+      "brisa ->  [(2, 3), (1, 3), (1, 3), (2, 4)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[3] c[3]\n",
+      "brisa ->  [(3, 3), (2, 3), (2, 3), (3, 4)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[4] c[4]\n",
+      "brisa ->  [(4, 4), (3, 4), (3, 4), (4, 5)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "ouro em l[5] c[6]\n",
+      "brilho ->  [(5, 6), (4, 6), (4, 6), (5, 7)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[6] c[5]\n",
+      "brisa ->  [(6, 5), (5, 5), (5, 5), (6, 6)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[7] c[0]\n",
+      "brisa ->  [(7, 0), (6, 0), (6, 0), (7, 1)]\n",
+      "\n",
+      "\n",
+      "\n",
+      "buraco em l[7] c[3]\n",
+      "brisa ->  [(7, 3), (6, 3), (6, 3), (7, 4)]\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -60,13 +110,45 @@
     "        else:\n",
     "            continue\n",
     "    \n",
-    "def gen_sensacoes(A, size):\n",
-    "    aux = size\n",
-    "    hole = ()\n",
+    "def gen_sensacoes(mtz, size):\n",
+    "    #essa e a funcao \n",
+    "    aux = size #numero de colunas e linhas\n",
+    "    #agora o programa vai procurar em cada linha e em cada coluna \n",
     "    for i in range(size):\n",
     "        for j in range(aux):\n",
-    "            if A[size][aux] == 'H':\n",
-    "               hole A[aux-1][size] \n",
+    "            if (mtz[i][j] == 'G'):  #quando o programa achar o ouro (Golden)\n",
+    "                print(f\"ouro em l[{i}] c[{j}]\\n\", end=\"\")\n",
+    "                #Em cada coordenada, uma magia pra não pegar posicoes fora do tabuleiro\n",
+    "                norte = (i, j) if i >= 0 and j >= 0 else None\n",
+    "                sul = (i-1, j) if i-1 >= 0 and j >= 0 else None\n",
+    "                oeste = (i, j+1) if i >= 0 and j+1 >= 0 else None\n",
+    "                leste = (i-1, j)  if i-1 >= 0 and j >= 0 else None\n",
+    "                #uma lista guarda as posicoes da sensacoes que o wumpus deve ler\n",
+    "                brilho = [norte, sul, leste, oeste]\n",
+    "                print(\"brilho -> \", brilho)\n",
+    "                print(\"\\n\\n\")\n",
+    "            elif (mtz[i][j] == 'H'):  #quando o programa achar o buraco (Hole)\n",
+    "                print(f\"buraco em l[{i}] c[{j}]\\n\", end=\"\")\n",
+    "                norte = (i, j) if i >= 0 and j >= 0 else None\n",
+    "                sul = (i-1, j) if i-1 >= 0 and j >= 0 else None\n",
+    "                oeste = (i, j+1) if i >= 0 and j+1 >= 0 else None\n",
+    "                leste = (i-1, j)  if i-1 >= 0 and j >= 0 else None\n",
+    "                brisa = [norte, sul, leste, oeste]\n",
+    "                print(\"brisa -> \", brisa)\n",
+    "                print(\"\\n\\n\")\n",
+    "            elif (mtz[i][j] == 'W'):  #quando o programa achar o wumpus\n",
+    "                print(f\"wumpus em l[{i}] c[{j}]\\n\", end=\"\")\n",
+    "                norte = (i, j) if i >= 0 and j >= 0 else None\n",
+    "                sul = (i-1, j) if i-1 >= 0 and j >= 0 else None\n",
+    "                oeste = (i, j+1) if i >= 0 and j+1 >= 0 else None \n",
+    "                leste = (i-1, j)  if i-1 >= 0 and j >= 0 else None\n",
+    "                fedor = [norte, sul, leste, oeste]\n",
+    "                print(\"fedor -> \", fedor)\n",
+    "                print(\"\\n\\n\")\n",
+    "            \n",
+    "#qual a melhor estrutura para armazenar dois valores\n",
+    "#como exibir o numero de linhas no jupyter \n",
+    "\n",
     "    \n",
     "def main():\n",
     "    tam = 9 #definindo o tamanho para a matriz\n",
@@ -79,33 +161,10 @@
     "        pos_elem(A, 'H')\n",
     "      \n",
     "    imprime(tam,A) #chama a funcao que imprime a matriz\n",
-    "\n",
+    "    gen_sensacoes(A, tam)\n",
+    "    \n",
     "if __name__ == '__main__':\n",
     "        main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-de8af1d23d28>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mfeels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mfeels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatriz\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
-     ]
-    }
-   ],
-   "source": [
-    "matriz = [0,1,2,3,4,5,6,7,8,9]\n",
-    "feels = ()\n",
-    "\n",
-    "feels.append(matriz[6])\n"
    ]
   }
  ],
